--- a/ext/gmail.css
+++ b/ext/gmail.css
@@ -24,8 +24,12 @@
 .nH.Wg.aAD.aAr,
 td.apU.xY,
 td.WA.xY,
+td.PF.xY,
 .nH.Wg.aAr,
 .ae4.aDM.nH.oy8Mbf > .Cp:first-child,
+.D.E.G-atb,
+.Xa.wT.ao4.bSyoAf,
+.Xa.wT.aIt.bSyoAf,
 .l2.pfiaof            { display: none !important; }
 
 form.gb_Ne.gb_lf      { max-width: 10000px !important; padding: 0; border-radius: 0; }
@@ -43,13 +47,13 @@ form.gb_Ne.gb_lf      { max-width: 10000px !important; padding: 0; border-radius
 
 .WR .z0 { height: 0 !important; margin: 0 !important; }
 
-.nM > .yJ             { padding: 30px 0 0 0; }
+.nM > .yJ             { padding: 0; position: fixed; top: 40%; }
 
 .nH.oy8Mbf.nn.aeN { position: fixed; left: 0; top: 50px; z-index: 1000; }
 
 .ae4.nH.oy8Mbf table, table.Bs.nH.iY.bAt { margin-top: 20px; max-width: 800px; margin-left: auto; margin-right: auto; border: none; }
-.ae4.nH.oy8Mbf table td { padding: 4px; background: transparent; }
-.ae4.nH.oy8Mbf table tr { background: transparent; border: none; }
+.ae4.nH.oy8Mbf table td { padding: 4px; background: transparent !important; }
+.ae4.nH.oy8Mbf table tr { background: transparent !important; border: none; }
 
 .ae4.nH.oy8Mbf table tr.zA.zE:hover { box-shadow: none; background: rgba(0, 0, 0, 0.03) !important; }
 
