removed extra elements

--- a/ext/gmail.css
+++ b/ext/gmail.css
@@ -1,4 +1,16 @@
+.gb_qe.gb_oe {
+  z-index: 2;
+}
+
+.vI8oZc.yL > .wl { background: none !important; }
+
+.gb_Kd.gb_2c.gb_3c,
+.aeN.WR.a6o.anZ.nH.oy8Mbf,
+.yJ:last-child > .ajl.aib.aZ6 > .wT,
 .Xa.wT.ZR.XT.adZ,
+.gb_te.gb_re.gb_8c.t6,
+.Yb.dIH7rb,
+.gb_Re > .gb_Sc,
 .brC-aT5-aOt-Jw,
 .gb_oe.gb_me.gb_3c.t6,
 .gb_Na.gb_bd.gb_gg.gb_h.gb_uf,
